2005-10-16  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-search-forward)
	(longlines-search-backward): Match any number of spaces.

2005-10-16  Thien-Thi Nguyen  <ttn@gnu.org>

	* diff-mode.el (diff-mode): Doc fix.

2005-10-16  David Reitter <david.reitter@gmail.com>

	* mail/sendmail.el (send-mail-function): Use mailclient-send-it
	as default on darwin and windows systems.

2005-10-16  Sven Joachim  <svenjoac@gmx.de>  (tiny change)

	* arc-mode.el (archive-zip-extract): Doc fix.

2005-10-16  Romain Francoise  <romain@orebokech.com>

	* mouse.el (mouse-1-click-follows-link): Doc fix.

2005-10-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* savehist.el: Don't require CL at runtime.
	(savehist-xemacs): Remove.
	(savehist-coding-system): Use utf-8 if available, regardless of religion.
	(savehist-no-conversion): Use (featurep 'xemacs).
	(savehist-load): Check existence of start-itimer rather than XEmacs.
	Use an idle timer.
	(savehist-process-for-saving): Replace use of CL funs `subseq' and
	`delete-if-not'.

2005-10-16  Hrvoje Niksic  <hniksic@xemacs.org>

	* savehist.el: Newer version.
	(savehist-autosave-interval, savehist-coding-system, savehist-timer)
	(savehist-last-checksum, savehist-no-conversion): New vars.
	(savehist-autosave, savehist-process-for-saving, savehist-printable):
	New functions.
	(savehist-load, savehist-save): Use them.
	(savehist-delimit): Remove.

2005-10-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-goto-locus): Display the
	compilation buffer first and the source buffer second, in case they're
	in overlapping frames.  Don't raise the compilation frame if it was the
	selected window upon entry.  Pass the `other-window' arg to
	pop-to-buffer.

	* info.el (Info-fontify-node): Use dolist.
	Change add-text-properties to put-text-property.

2005-10-16  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-font-lock-url): Catch when point past